<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentDashboard">

    <Button
        android:id="@+id/GoToSubmitComplaintBtn"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:onClick="onClickStudentComplaint"
        android:text="@string/submit_a_complaint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="332dp"
        android:layout_height="82dp"
        android:layout_marginTop="100dp"
        android:text="@string/student_dashboard"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="onClickStudentEvent"
        android:text="@string/view_events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoToSubmitComplaintBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>